--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
 
 .container {
     width: 800px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .clock-digital {
@@ -166,24 +171,131 @@ body {
     font-size: 20px;
 }
 
-button {
-    margin: 120px 15px 15px 15px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 130px;
-    height: 50px;
+/* calendar */
+.calendar{
+    display: none;
+    padding: 20px;
+    width: 400px;
+    height: 400px;
     box-shadow: -2.17893px -2.17893px 6.5368px #FFF, 2.17893px 2.17893px 6.5368px rgba(174, 174, 192, 0.4);
     background-color: #e2e2ee;
-    border-radius: 15px;
-    border: none;
+    border-radius: 25px;
     color: #4d596e;
-    text-transform: uppercase;
+
+}
+.calendar-header{
+    padding: 10px 20px;
+    box-shadow: inset -6px -6px 16px rgba(255, 255, 255, 0.103), inset 2px 2px 15px rgba(0, 0, 0, 0.164);
+    background-color: #e2e2ee;
+    display: flex;
+    border-radius: 20px;
+}
+.calendar-header span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    font-weight: 500;
+}
+.calendar-header button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -2.17893px -2.17893px 6.5368px #FFF, 2.17893px 2.17893px 6.5368px rgba(174, 174, 192, 0.4);
+    background-color: #e2e2ee;
+    width: 25px;
+    height: 25px;
+    border: none;
+    padding: 5px;
+    border-radius: 50%;
+}
+.calendar-header button:hover{
+    background-color: #cbcbce;
+}
+.calendar-header button img{
+    width: 18px;
+    height: 18px;
+    opacity: .7;
+}
+.calendar-weekdays, .calendar-days{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+    gap: 5px;
+}
+.calendar-weekdays {
+    padding: 10px 10px 0 10px;
+}
+.calendar-weekdays div{
+    font-weight: 500;
+}
+.calendar-days {
+    padding: 10px;
+    grid-template-rows: repeat(6, 1fr);
+}
+.calendar-days div{
+    padding: 10px;
+    text-align: center;
+}
+.prevnext{
+    color: #4d596e88;
+}
+.currentday{
+    border-radius: 50%;
+    background-color: rgb(207, 36, 36);
+    color: #e2e2ee;;
+    border: 2px solid #ececf7;;
+    box-shadow: -4.17893px -4.17893px 6.5368px #FFF, 2.17893px 2.17893px 6.5368px rgba(174, 174, 192, 0.411),
+    inset -2px -2px 7px rgba(255, 198, 198, 0.774), inset 2px 2px 10px rgba(85, 1, 1, 0.842);
+    /* box-shadow: inset -6px -6px 16px rgba(255, 255, 255, 0.103), inset 2px 2px 15px rgba(0, 0, 0, 0.164); */
+}
+
+/* dropdown */
+.dropdown{
+    position: absolute;
+    top: 20px;
+}
+.dropdown-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+}
+.dropdown button {
+    width: 280px;
+    border: none;
+    padding: 10px;
+    color: #4d596e;
     font-size: 17px;
     font-weight: 500;
 }
-button:hover{
+.btndropdown{
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: -2.17893px -2.17893px 6.5368px #FFF, 2.17893px 2.17893px 6.5368px rgba(174, 174, 192, 0.4);
+    background-color: #e2e2ee;
+}
+.btndropdown:hover{
+    background-color: #cecece71;
+}
+.dropdown-list{
+    position: absolute;
+    top: 60px;
+    display: none;
+    width: 280px;
+    box-shadow: inset -6px -6px 16px rgba(255, 255, 255, 0.082), inset 2px 2px 15px rgba(0, 0, 0, 0.151);
+    background-color: #e2e2ee;
+    border-radius: 10px;
+    z-index: 100;
+}
+.dropdown-list button{
+    border-radius: 10px;
+    background-color: transparent;
+}
+.dropdown-list button:hover{
     background-color: #d9d9e3;
-    transition: .2s ease;
+}
+.show{
+    display: block;
 }
